--- a/Demo_QA/pom.xml
+++ b/Demo_QA/pom.xml
@@ -28,5 +28,10 @@
       <artifactId>selenium-java</artifactId>
       <version>3.14.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.relevantcodes</groupId>
+      <artifactId>extentreports</artifactId>
+      <version>2.41.2</version>
+    </dependency>  
   </dependencies>
 </project>
